k8s_actions_guide/version1/istio_manifest/istio_client_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-client-test
spec:
  selector:
    matchLabels:
      app: istio-client-test
  template:
    metadata:
      labels:
        app: istio-client-test
    spec:
      containers:
        - name: istio-client-test
          image: docker.io/leigg/istio_client_test_pod:v1
        - name: tcpdump # 可以使用此容器抓取 Pod 上流经 sidecar 容器的流量
          image: docker.io/kaazing/tcpdump:latest
          command: [ "sleep", "1d" ]
