k8s_actions_guide/version1/istio_manifest/authz-deny-emptyid.yaml
# nonk8s
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-mtls
  namespace: foo
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals: ["*"]
